Fixed formatting and moved Space Invaders to a seperate repo