@@ -1,4 +1,25 @@
 # Pong
+I will be recreating the game Pong programming in Java with the help of JavaFX to render the graphical interface. 
 
-Develop the popular 1970s game Pong using Java with JavaFX framework.
+Some goals and learning outcomes from creating Pong:
+- Plan, organize, and execute till completion of Pong
+- Improve my knowledge and experience with Object Oriented Programming (OOP)
+- Use threads to help with object movement and collision detection
+- Design a user-friendly interface and simple experience
 
+
+## Setup
+1. To begin, Download or clone this repository to your local machine.
+
+2. Ensure you have Java installed on your system. Try ``` java -version ``` in the terminal to check.
+If not, you can download from the [Java Website](https://www.java.com/). Any version will work for the application to run correctly.
+
+3. Then, Head over to the [JavaFx website](https://openjfx.io/) and download version 21.0.4 of the SDK for your OS.
+
+4. Using the following command to compile and run the application.
+``` command
+java --module-path "/Path/To/javafx-sdk-21.0.4/lib" --add-modules javafx.controls,javafx.fxml Pong_Game/src/pong/*.java
+```
+Make sure to replace '/Path/To/' to your home directory to the file location.
+
+5. You are all set. Enjoy, the game!!
